# solana-empty-geyser-plugin

./: Cargo.toml  config.json  rust-toolchain.toml
plugin/: Cargo.toml
plugin/src/: config.rs  lib.rs
