[workspace]
members = [
    "plugin"
]

[profile.release]
debug = true
lto = true
codegen-units = 1

[workspace.dependencies]
solana-geyser-plugin-interface = "=1.18.22"
solana-sdk = "=1.18.22"
solana-logger = "=1.18.22"
solana-streamer = "=1.18.22"
solana-quic-client = "=1.18.22"
solana-net-utils = "=1.18.22"
solana-connection-cache = "=1.18.22"
