[workspace]
members = [
    "plugin"
]

[profile.release]
debug = true
lto = true
codegen-units = 1

[workspace.dependencies]
agave-geyser-plugin-interface = "=2.0.10"
solana-sdk = "=2.0.10"
solana-logger = "=2.0.10"
solana-streamer = "=2.0.10"
solana-quic-client = "=2.0.10"
solana-net-utils = "=2.0.10"
solana-connection-cache = "=2.0.10"
