[workspace]
members = [
    "plugin"
]

[profile.release]
debug = true
lto = true
codegen-units = 1

[workspace.dependencies]
agave-geyser-plugin-interface = "=2.1.11"
solana-sdk = "=2.1.11"
solana-streamer = "=2.1.11"
solana-quic-client = "=2.1.11"
solana-net-utils = "=2.1.11"
solana-connection-cache = "=2.1.11"
