[package]
name = "geyser-account-timestamp-tagging-plugin"
version = "0.1.0"
edition = "2021"
authors = ["Groovie Germanikus"]

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "config-check"

[dependencies]
solana-sdk = { workspace = true }
solana-logger = { workspace = true }
solana-geyser-plugin-interface = { workspace = true }

log = "0.4.17"
tokio = { version = "1.21.2", features = ["rt-multi-thread", "macros", "time", "fs"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
clap = { version = "=4.3.24", features = ["cargo", "derive"] }
anyhow = "1.0.70"

[build-dependencies]
anyhow = "1.0.62"
cargo-lock = "9.0.0"
git-version = "0.3.5"
vergen = { version = "8.2.1", features = ["build", "rustc"] }
